# aibeat

./: README.md
mlpart/: Cargo.toml
mlpart/src/: main.rs
model/: Cargo.toml  README.md
model/.cargo/: config.toml
model/src/: main.rs
my_burn_app/: .gitignore  Cargo.toml
my_burn_app/src/: main.rs  model.rs
rand-wave/: .gitignore  Cargo.toml
rand-wave/src/: main.rs
