[package]
name = "aibeat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.79", features = ["backtrace"] }
candle-core = { version = "0.3.2", features = [] }
candle-nn = { version = "0.3.2", features = [] }
